Fix test policy, refine test targets