@@ -115,11 +115,19 @@
         <touch file="api/target/test/.lastcompile" verbose="false"/>
     </target>
 
-    <target name="api.test" depends="api">
+    <target name="api.test.pseudotarget">
+        <echo message="============================================="/>
+        <echo message="${message}"/>
+        <echo message="============================================="/>
         <mkdir dir="api/target/test-results"/>
         <junit printsummary="true" fork="yes" includeantruntime="true">
-            <formatter classname="org.apache.tools.ant.taskdefs.optional.junit.XMLJUnitResultFormatter"/>
+            <sysproperty key="build.home" value="${basedir}"/>
+            <sysproperty key="ant.library.dir" value="${ant.home}/lib"/>
+            <sysproperty key="lib.junit.local" value="${lib.junit.local}"/>
+            <jvmarg line="${test.jvmargs}"/>
+            <formatter type="plain" extension="${extension}"/>
             <classpath>
+                <path refid="test-support.classpath"/>
                 <path refid="api.classpath"/>
                 <pathelement location="api/target/test/classes"/>
                 <pathelement location="${lib.junit.local}"/>
@@ -131,6 +139,19 @@
                </fileset>
             </batchtest>
         </junit>
+    </target>
+
+    <target name="api.test" depends="api,test-support,api.test.compile">
+        <antcall inheritall="true" inheritrefs="true" target="api.test.pseudotarget">
+            <param name="extension" value=".txt"/>
+            <param name="message" value="Running with no security manager"/>
+            <param name="test.jvmargs" value="-Ddummy=dummy"/>
+        </antcall>
+        <antcall inheritall="true" inheritrefs="true" target="api.test.pseudotarget">
+            <param name="extension" value="-security.txt"/>
+            <param name="message" value="Running with security manager"/>
+            <param name="test.jvmargs" value="-Djava.security.manager=org.jboss.xnio.test.support.LoggingSecurityManager -Djava.security.policy=${basedir}/test-support/src/main/resources/testing.policy"/>
+        </antcall>
     </target>
 
     <target name="api.clean">
@@ -247,11 +268,19 @@
         <touch file="nio-impl/target/test/.lastcompile" verbose="false"/>
     </target>
 
-    <target name="nio-impl.test" depends="nio-impl">
+    <target name="nio-impl.test.pseudotarget">
+        <echo message="============================================="/>
+        <echo message="${message}"/>
+        <echo message="============================================="/>
         <mkdir dir="nio-impl/target/test-results"/>
         <junit printsummary="true" fork="yes" includeantruntime="true">
-            <formatter classname="org.apache.tools.ant.taskdefs.optional.junit.XMLJUnitResultFormatter"/>
+            <sysproperty key="build.home" value="${basedir}"/>
+            <sysproperty key="ant.library.dir" value="${ant.home}/lib"/>
+            <sysproperty key="lib.junit.local" value="${lib.junit.local}"/>
+            <jvmarg line="${test.jvmargs}"/>
+            <formatter type="plain" extension="${extension}"/>
             <classpath>
+                <path refid="test-support.classpath"/>
                 <path refid="api.classpath"/>
                 <path refid="spi.classpath"/>
                 <path refid="nio-impl.classpath"/>
@@ -265,6 +294,19 @@
                </fileset>
             </batchtest>
         </junit>
+    </target>
+
+    <target name="nio-impl.test" depends="nio-impl,test-support,nio-impl.test.compile">
+        <antcall inheritall="true" inheritrefs="true" target="nio-impl.test.pseudotarget">
+            <param name="extension" value=".txt"/>
+            <param name="message" value="Running with no security manager"/>
+            <param name="test.jvmargs" value="-Ddummy=dummy"/>
+        </antcall>
+        <antcall inheritall="true" inheritrefs="true" target="nio-impl.test.pseudotarget">
+            <param name="extension" value="-security.txt"/>
+            <param name="message" value="Running with security manager"/>
+            <param name="test.jvmargs" value="-Djava.security.manager=org.jboss.xnio.test.support.LoggingSecurityManager -Djava.security.policy=${basedir}/test-support/src/main/resources/testing.policy"/>
+        </antcall>
     </target>
 
     <target name="nio-impl.clean">
@@ -316,6 +358,42 @@
         </path>
     </target>
 
+    <!-- test-support module -->
+
+    <target name="test-support.compile.depcheck">
+        <mkdir dir="test-support/target/main"/>
+        <uptodate property="test-support.compile.uptodate" targetfile="test-support/target/main/.lastcompile">
+            <srcfiles dir="test-support/src/main/java">
+                <include name="**/"/>
+                <include name="**/*.java"/>
+                <exclude name="**/.*"/>
+            </srcfiles>
+        </uptodate>
+    </target>
+
+    <target name="test-support.compile" depends="test-support.compile.depcheck" unless="test-support.compile.uptodate">
+        <mkdir dir="test-support/target/main/classes"/>
+        <javac
+                source="${javac.source}"
+                target="${javac.target}"
+                srcdir="test-support/src/main/java"
+                destdir="test-support/target/main/classes"
+                debug="true">
+            <compilerarg value="-Xlint:unchecked"/>
+        </javac>
+        <touch file="test-support/target/main/.lastcompile" verbose="false"/>
+    </target>
+
+    <target name="test-support.clean">
+        <delete dir="test-support/target"/>
+    </target>
+
+    <target name="test-support" description="Build the test-support module" depends="test-support.compile">
+        <path id="test-support.classpath">
+            <pathelement location="test-support/target/main/classes"/>
+        </path>
+    </target>
+
     <!-- ============================================== -->
     <!-- JARS - Keep in alpha order by jar name         -->
     <!-- ============================================== -->
@@ -340,7 +418,7 @@
     <!-- Default targets - keep depends in alpha order by category name -->
     <!-- These targets should explicitly list all modules, even if they will be built by other modules -->
 
-    <target name="base" description="Build base modules only (no external deps)" depends="api,nio-impl,spi,javadoc"/>
+    <target name="base" description="Build base modules only (no external deps)" depends="api,nio-impl,spi,test-support,javadoc"/>
 
     <target name="all" description="Build everything" depends="base,deployer"/>
 
